--- a/checkout/pom.xml
+++ b/checkout/pom.xml
@@ -56,7 +56,11 @@
                 <configuration>                         
     				  <mainClass>io.flowing.retail.checkout.CheckoutApplication</mainClass>
                 </configuration>
-             </plugin>      
+             </plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
     	</plugins>
     </build>	
 </project>
